results/SVCOMP/conversational/log-ExSymExeD2I-2024_03_12_07_55_49.txt
class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:15: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == inst.test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: cannot find symbol
  //@ ensures \result ==> \result == inst.test(x);
                                     ^
  symbol:   variable inst
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:15: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == new Main().test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      return new Main().test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> \result == new Main().test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == new Main().test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      return new Main().test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> \result == new Main().test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == new Main().test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      return new Main().test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> \result == new Main().test(x);
                                     ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= (double)(Integer.MAX_VALUE / 2);
  //@ ensures \result ==> \result == test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> \result == test(x);
                                     ^
1 error

